--- a/src/scss/_cuteworks-variables.scss
+++ b/src/scss/_cuteworks-variables.scss
@@ -1,3 +1,7 @@
+/***********************************************************************************************************************
+ * Common variables for the cuteworks framework.
+ * ********************************************************************************************************************/
+
 $cuteworks-primary: #1FC8DB;
 $cuteworks-primary-subtle: #F0F7F7;
 $cuteworks-secondary: #DB1F83;
