--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -18,7 +18,7 @@ $info: $cutcash-secondary;
 // endregion
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-@import "../../deps/bulma";
+@import "../../deps/bulma/bulma";
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // region Framework fixes
