--- a/templates/splash.html
+++ b/templates/splash.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>CutCash</title>
-</head>
-<body>
-<h1>Splash</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}CutCash{% endblock %}
+
+{% block body %}
+{% endblock %}
