--- a/templates/splash/splash.html
+++ b/templates/splash/splash.html
@@ -2,7 +2,7 @@
 {% block title %}CutCash{% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bin/splash/splash.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bin/splash/splash.bundled.js') }}"></script>
 {% endblock %}
 
 {% block header %}
