refactor react include structure

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 
     <!-- JS frameworks and custom JS to run on every page -->
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bin/base.bundled.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bin/base.js') }}"></script>
     <!-- / -->
 
     <title>{% block title %}{% endblock %}</title>
