--- a/templates/splash/splash-body.html
+++ b/templates/splash/splash-body.html
@@ -1,6 +1,5 @@
 <section>
     <div class="container">
-
-        <div id="react_example"></div>
+        <div id="react-app"></div>
     </div>
 </section>
