--- a/src/scss/cutcash.scss
+++ b/src/scss/cutcash.scss
@@ -1,3 +1,6 @@
 /***********************************************************************************************************************
  * Styles specific to CutCash.
  **********************************************************************************************************************/
+
+@import "components/parties/parties";
+
