--- a/src/scss/cutcash.scss
+++ b/src/scss/cutcash.scss
@@ -2,5 +2,7 @@
  * Styles specific to CutCash.
  **********************************************************************************************************************/
 
+@import "fx/effects";
+
 @import "components/parties/parties";
 
