fixes for dynamic label

--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -18,6 +18,16 @@ $info: $cutcash-secondary;
 // endregion
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// region Bulma variable overrides.
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+$card-background-color: #F7F7F2;
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// endregion
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 @import "../../deps/bulma/bulma";
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
