Add logo and adjust styles

--- a/src/scss/_cutcash-variables.scss
+++ b/src/scss/_cutcash-variables.scss
@@ -9,7 +9,12 @@
 $cutcash-sans-serif-font: 'Yantramanav', sans-serif;
 $cutcash-serif-font: 'Roboto Slab', serif;
 
+$cutcash-black: #1c1d23;
+$cutcash-dark: #464655;
+$cutcash-light: #e4e6c3;
+$cutcash-white: #f7f7f2;
 $cutcash-primary: #9bc53d;
-$cutcash-primary-subtle: #e4e6c3;
 $cutcash-secondary: $cuteworks-secondary;
 $cutcash-secondary-subtle: $cuteworks-secondary-subtle;
+
+
