--- a/src/scss/cutcash.scss
+++ b/src/scss/cutcash.scss
@@ -10,5 +10,5 @@
 @import "cutcash-variables";
 
 body, section.section {
-  background-color: $cutcash-primary-subtle;
+  background-color: $cutcash-light;
 }
