add navbar and logo

--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -22,9 +22,11 @@ $info: $cutcash-secondary;
 // region Bulma variable overrides.
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-$footer-background-color: #464655;
-$card-background-color: #F7F7F2;
+$footer-background-color: $cutcash-dark;
+$card-background-color: $cutcash-white;
 
+$navbar-background-color: $cutcash-black;
+$navbar-item-hover-background-color: $cutcash-dark;
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
@@ -35,6 +37,11 @@ $card-background-color: #F7F7F2;
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // region Framework fixes
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+/* Allow the navbar logo to be as large as it needs to be. */
+.navbar-item img {
+  max-height: none;
+}
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
