--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -28,6 +28,8 @@ $card-background-color: $cutcash-white;
 $navbar-background-color: $cutcash-black;
 $navbar-item-hover-background-color: $cutcash-dark;
 
+$black: $cutcash-black;
+
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // endregion
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
