starting new style for splash page

--- a/src/scss/bulma.scss
+++ b/src/scss/bulma.scss
@@ -22,7 +22,7 @@ $info: $cutcash-secondary;
 // region Bulma variable overrides.
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-$footer-background-color: $cutcash-dark;
+$footer-background-color: $cutcash-black;
 $card-background-color: $cutcash-white;
 
 $navbar-background-color: $cutcash-black;
