--- a/templates/splash/splash-body.html
+++ b/templates/splash/splash-body.html
@@ -11,5 +11,15 @@
 
 
 <section>
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <h2 class="title">Thing one</h2>
+            </div>
 
+            <div class="column">
+                <h2 class="title">Thing two</h2>
+            </div>
+        </div>
+    </div>
 </section>
