--- a/templates/splash/splash-body.html
+++ b/templates/splash/splash-body.html
@@ -3,18 +3,18 @@
         <div class="container">
             <img src="{{ url_for('static', filename='img/logo/logo512.png') }}" alt="CutCash"/>
             <h1 class="title">
-                Receipt splitting made easy
+                Easy receipt splitting
             </h1>
         </div>
     </div>
 </section>
 
 
-<section>
+<section class="section">
     <div class="container">
         <div class="columns">
             <div class="column">
-                <h2 class="title">Thing one</h2>
+                {% include "splash/splash-body-fridge.html" %}
             </div>
 
             <div class="column">
