--- a/src/scss/_cutcash-variables.scss
+++ b/src/scss/_cutcash-variables.scss
@@ -6,6 +6,7 @@
 
 @import "cuteworks-variables";
 
+$cutcash-block-font: 'Bungee', sans-serif;
 $cutcash-sans-serif-font: 'Yantramanav', sans-serif;
 $cutcash-serif-font: 'Roboto Slab', serif;
 
@@ -14,5 +15,8 @@ $cutcash-dark: #464655;
 $cutcash-light: #e4e6c3;
 $cutcash-white: #f7f7f2;
 $cutcash-primary: #9bc53d;
+
 $cutcash-secondary: $cuteworks-secondary;
 $cutcash-secondary-subtle: $cuteworks-secondary-subtle;
+
+$cutcash-black-deep: darken($cutcash-black, 5%);
