--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Yantramanav:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
+
     <!-- / -->
 
     <!-- Template styles -->
