finalize fridge svg

--- a/templates/splash/splash-body-fridge.html
+++ b/templates/splash/splash-body-fridge.html
@@ -28,6 +28,6 @@
     <rect width="6.5%" height="10rem" x="60%" y="17rem" class="is-color-cutcash-light is-stroke-cutcash-black"></rect>
     <rect width="6.5%" height="10rem" x="59.5%" y="16.75rem" class="is-color-cutcash-white is-stroke-cutcash-dark"></rect>
 
-    <circle r="1rem" x="59%" y="17rem" class="is-color-cutcash-secondary"></circle>
+    <circle r="0.5rem" cx="59.5%" cy="16.75rem" class="is-color-cutcash-secondary is-stroke-cutcash-black"></circle>
 
 </svg>
