add copy and svg fixes for firefox

--- a/src/scss/route/splash.scss
+++ b/src/scss/route/splash.scss
@@ -9,9 +9,8 @@
 
 section.section {
   background-color: $cutcash-dark;
-
-  .title {
-    color: $cutcash-light;
-  }
 }
 
+.button.is-large.is-block {
+  font-weight: bold;
+}
