--- a/templates/splash/splash-body.html
+++ b/templates/splash/splash-body.html
@@ -18,7 +18,21 @@
             </div>
 
             <div class="column">
-                <h2 class="title">Thing two</h2>
+                <div class="columns">
+                    <div class="column">
+                        <a href="#" class="button is-primary is-large is-block">
+                            Open CutCash
+                        </a>
+                    </div>
+                </div>
+                <div class="box">
+                    <h2 class="title">Split receipts between friends</h2>
+                    <p class="content">
+                        CutCash makes it easy to divide your expenses between groups of people &mdash; from a pile of
+                        receipts tacked on the fridge, or a single check from a restaurant.
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
