--- a/templates/splash/splash-body-fridge.html
+++ b/templates/splash/splash-body-fridge.html
@@ -6,28 +6,29 @@
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
 >
+
     <symbol id="fridgehandle">
-        <rect height="16rem" width="1rem" rx="0.5rem" ry="0.5rem" class="is-color-cutcash-dark"></rect>
+        <rect height="16em" width="1em" rx="0.5em" ry="0.5em" class="is-color-cutcash-dark"></rect>
     </symbol>
 
-    <rect width="91.5%" height="55.25rem" rx="1rem" ry="1rem" class="is-color-cutcash-black-deep"></rect>
-    <rect width="90%" height="55rem" rx="1rem" ry="1rem" class="is-color-cutcash-black"></rect>
+    <rect width="91.5%" height="55.25em" rx="1em" ry="1em" class="is-color-cutcash-black-deep"></rect>
+    <rect width="90%" height="55em" rx="1em" ry="1em" class="is-color-cutcash-black"></rect>
 
     <!-- Handles -->
-    <use xlink:href="#fridgehandle" x="37%" y="19.5rem"></use>
-    <use xlink:href="#fridgehandle" x="45%" y="19.5rem"></use>
+    <use xlink:href="#fridgehandle" x="37%" y="19.5em"></use>
+    <use xlink:href="#fridgehandle" x="45%" y="19.5em"></use>
 
     <!-- Divider line -->
-    <rect width="0.25rem" height="55rem" x="42%" y="0" class="is-color-cutcash-black-deep"></rect>
+    <rect width="0.25em" height="55em" x="42%" y="0" class="is-color-cutcash-black-deep"></rect>
 
     <!-- Water thing -->
-    <rect width="28%" height="12rem" x="2rem" y="21.5rem" class="is-color-cutcash-black-deep"></rect>
+    <rect width="28%" height="12em" x="2em" y="21.5em" class="is-color-cutcash-black-deep"></rect>
 
     <!-- Receipts -->
-    <rect width="6.5%" height="10rem" x="60.5%" y="17.25rem" class="is-color-cutcash-dark is-stroke-cutcash-black-deep"></rect>
-    <rect width="6.5%" height="10rem" x="60%" y="17rem" class="is-color-cutcash-light is-stroke-cutcash-black"></rect>
-    <rect width="6.5%" height="10rem" x="59.5%" y="16.75rem" class="is-color-cutcash-white is-stroke-cutcash-dark"></rect>
+    <rect width="6.5%" height="10em" x="60.5%" y="17.25em" class="is-color-cutcash-dark is-stroke-cutcash-black-deep"></rect>
+    <rect width="6.5%" height="10em" x="60%" y="17em" class="is-color-cutcash-light is-stroke-cutcash-black"></rect>
+    <rect width="6.5%" height="10em" x="59.5%" y="16.75em" class="is-color-cutcash-white is-stroke-cutcash-dark"></rect>
 
-    <circle r="0.5rem" cx="59.5%" cy="16.75rem" class="is-color-cutcash-secondary is-stroke-cutcash-black"></circle>
+    <circle r="0.5em" cx="59.5%" cy="16.75em" class="is-color-cutcash-secondary is-stroke-cutcash-black"></circle>
 
 </svg>
