--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,13 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Icon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='icon57.png') }}" />
+    <link rel="apple-touch-icon" href="{{ url_for('static', filename='icon57.png') }}"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='icon72.png') }}"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='icon114.png') }}" />
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='icon144.png') }}" />
+
     <!-- Framework and application style -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bin/bulma.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bin/cutcash.css') }}">
