--- a/templates/splash/splash-body.html
+++ b/templates/splash/splash-body.html
@@ -13,7 +13,7 @@
 <section class="section">
     <div class="container">
         <div class="columns">
-            <div class="column">
+            <div class="column is-hidden-touch">
                 {% include "splash/splash-body-fridge.html" %}
             </div>
 
