add link to app

--- a/templates/splash/splash-body.html
+++ b/templates/splash/splash-body.html
@@ -20,7 +20,7 @@
             <div class="column">
                 <div class="columns">
                     <div class="column">
-                        <a href="#" class="button is-primary is-large is-block">
+                        <a href="{{ url_for('app') }}" class="button is-primary is-large is-block">
                             Open CutCash
                         </a>
                     </div>
